--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -4,7 +4,6 @@
     <picture class="section-gallery__item">
       <source
         srcset="
-          ./images/gallery-tablet@3x.jpg 3x,
           ./images/gallery-tablet@2x.jpg 2x,
           ./images/gallery-tablet@1x.jpg 1x
         "
@@ -12,7 +11,6 @@
       />
       <source
         srcset="
-          ./images/gallery-desktop@3x.jpg 3x,
           ./images/gallery-desktop@2x.jpg 2x,
           ./images/gallery-desktop@1x.jpg 1x
         "
@@ -21,9 +19,7 @@
       <img
         class="section-gallery__icon"
         srcset="
-          ./images/gallery-mobile@3x.jpg 3x,
-          ./images/gallery-mobile@2x.jpg 2x
-        "
+          ./images/gallery-mobile@2x.jpg 2x"
         src="./images/gallery-mobile@1x.jpg"
         alt="Gallery of Ice-cream #1"
       />
@@ -32,7 +28,6 @@
     <picture class="section-gallery__item">
       <source
         srcset="
-          ./images/gallery1-tablet@3x.jpg 3x,
           ./images/gallery1-tablet@2x.jpg 2x,
           ./images/gallery1-tablet@1x.jpg 1x
         "
@@ -40,7 +35,6 @@
       />
       <source
         srcset="
-          ./images/gallery1-desktop@3x.jpg 3x,
           ./images/gallery1-desktop@2x.jpg 2x,
           ./images/gallery1-desktop@1x.jpg 1x
         "
@@ -49,7 +43,6 @@
       <img
         class="section-gallery__icon"
         srcset="
-          ./images/gallery1-mobile@3x.jpg 3x,
           ./images/gallery1-mobile@2x.jpg 2x
         "
         src="./images/gallery1-mobile@1x.jpg"
@@ -60,7 +53,6 @@
     <picture class="section-gallery__item">
       <source
         srcset="
-          ./images/gallery2-tablet@3x.jpg 3x,
           ./images/gallery2-tablet@2x.jpg 2x,
           ./images/gallery2-tablet@1x.jpg 1x
         "
@@ -68,7 +60,6 @@
       />
       <source
         srcset="
-          ./images/gallery2-desktop@3x.jpg 3x,
           ./images/gallery2-desktop@2x.jpg 2x,
           ./images/gallery2-desktop@1x.jpg 1x
         "
@@ -77,7 +68,6 @@
       <img
         class="section-gallery__icon"
         srcset="
-          ./images/gallery2-mobile@3x.jpg 3x,
           ./images/gallery2-mobile@2x.jpg 2x
         "
         src="./images/gallery2-mobile@1x.jpg"
